# api/api.go
@@ -101,12 +101,14 @@ func (a *Application) Mount() http.Handler {
 				r.Get("/{exerciseID}", h.GetExerciseHandler)
 				r.Get("/", h.GetAllExercisesHandler)
 				r.With(m.AuthTokenMiddleware).Post("/{exerciseID}/like", h.LikeExerciseHandler)
-				r.With(m.AuthTokenMiddleware).Post("/{exerciseID}/unlike", h.UnLikeExerciseHandler)
+				r.With(m.AuthTokenMiddleware).Post("/{exerciseID}/unlike", h.UnlikeExerciseHandler)
 			})
 			r.Route("/workouts", func(r chi.Router) {
 				r.Get("/{workoutID}", h.GetWorkout)
 				r.With(m.AuthTokenMiddleware).Post("/", h.CreateWorkoutHandler)
 				r.Get("/", h.GetAllWorkouts)
+				r.With(m.AuthTokenMiddleware).Post("/{workoutID}/like", h.LikeWorkoutHandler)
+				r.With(m.AuthTokenMiddleware).Post("/{workoutID}/unlike", h.UnlikeWorkoutHandler)
 			})
 		})
 	})
